--- a/rpm-packaging/mysvn/SOURCES/apache2-svn.conf
+++ b/rpm-packaging/mysvn/SOURCES/apache2-svn.conf
@@ -1,4 +1,4 @@
-# 
+#
 # svn.mycorp.org non SSL
 #
 
@@ -6,7 +6,7 @@
 
   ServerAdmin webmaster@mycorp.org
   ServerName svn.mycorp.org
-  
+
   ErrorDocument 400 default
   ErrorDocument 401 default
   ErrorDocument 403 default
@@ -23,38 +23,38 @@
   ErrorDocument 501 default
   ErrorDocument 502 default
   ErrorDocument 503 default
-  
+
   SetOutputFilter DEFLATE
   SetInputFilter DEFLATE
-  
+
   DeflateFilterNote Input instream
   DeflateFilterNote Output outstream
   DeflateFilterNote Ratio ratio
-  
+
   # Logs
   ErrorLog /var/log/apache2/svn_error_log
   CustomLog /var/log/apache2/svn_access_log combined
-  
-  <Location /reporo>
-  
+
+  <Location /public>
+
     DAV svn
-    SVNPath /var/lib/mysvn/repos/myrepo
-    
+    SVNPath /var/lib/mysvn/repos/public
+
     <LimitExcept GET PROPFIND OPTIONS REPORT>
     </LimitExcept>
-  
+
   </Location>
 
-  <Location /reporw>
-  
+  <Location /private>
+
     DAV svn
-    SVNPath /var/lib/mysvn/repos/myrepo
+    SVNPath /var/lib/mysvn/repos/private
     AuthType Basic
     require valid-user
-    AuthName "Subversion my repo access"
-    AuthUserFile /var/lib/mysvn/repos/access_passwords_myrepo
-    AuthzSVNAccessFile /var/lib/mysvn/repos/access_rules_myrepo
-    
+    AuthName "Private Subversion Access"
+    AuthUserFile /var/lib/mysvn/repos/private_access_passwords
+    AuthzSVNAccessFile /var/lib/mysvn/repos/private_access_rules
+
   </Location>
 
 </VirtualHost>
