--- a/rpm-packaging/mysvn/SOURCES/apache2-svn.conf
+++ b/rpm-packaging/mysvn/SOURCES/apache2-svn.conf
@@ -4,7 +4,7 @@
 
 <VirtualHost *:80>
 
-  ServerAdmin webmaster@mycorp.org
+  ServerAdmin forgemaster@mycorp.org
   ServerName svn.mycorp.org
 
   ErrorDocument 400 default
