--- a/rpm-packaging/mysvn/SOURCES/apache2-svn.conf
+++ b/rpm-packaging/mysvn/SOURCES/apache2-svn.conf
@@ -35,7 +35,11 @@
   ErrorLog /var/log/apache2/svn_error_log
   CustomLog /var/log/apache2/svn_access_log combined
 
-  <Location /public>
+  # Public Repository
+  #
+  # Read Access to all
+  #
+  <Location /allpublic>
 
     DAV svn
     SVNPath /var/lib/mysvn/repos/public
@@ -45,6 +49,26 @@
 
   </Location>
 
+  # Public Repository
+  #
+  # Read/Write Access to trusted users
+  #
+  <Location /public>
+
+    DAV svn
+    SVNPath /var/lib/mysvn/repos/public
+    AuthType Basic
+    require valid-user
+    AuthName "Private Subversion Access"
+    AuthUserFile /var/lib/mysvn/repos/credentials
+    AuthzSVNAccessFile /var/lib/mysvn/repos/public_access_rules
+
+  </Location>
+
+  # Private Repository
+  #
+  # Read/Write Access to trusted users
+  #
   <Location /private>
 
     DAV svn
@@ -52,7 +76,7 @@
     AuthType Basic
     require valid-user
     AuthName "Private Subversion Access"
-    AuthUserFile /var/lib/mysvn/repos/private_access_passwords
+    AuthUserFile /var/lib/mysvn/repos/credentials
     AuthzSVNAccessFile /var/lib/mysvn/repos/private_access_rules
 
   </Location>
