--- a/rpm-packaging/mygit/SOURCE/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCE/apache2-git.conf
@@ -29,7 +29,7 @@
 
   <Directory /srv/www/htdocs/cgit>
 
-    SetEnv CGIT_CONFIG /var/lib/mygit/conf/public
+    SetEnv CGIT_CONFIG /var/lib/mygit/conf/public.conf
 
     Addhandler cgi-script .cgi
     DirectoryIndex cgit.cgi
