--- a/rpm-packaging/mygit/SOURCE/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCE/apache2-git.conf
@@ -31,7 +31,7 @@
 
     SetEnv CGIT_CONFIG /var/lib/mygit/conf/public.conf
 
-    Addhandler cgi-script .cgi
+    Addhandler cgi-bin/cgit/cgi-script .cgi
     DirectoryIndex cgit.cgi
     Options +FollowSymLinks +ExecCGI
     AllowOverride None
