--- a/rpm-packaging/mygit/SOURCE/public.conf
+++ b/rpm-packaging/mygit/SOURCE/public.conf
@@ -40,9 +40,9 @@ max-stats=quarter
 # Specify the css url
 css=/cgit.css
 # Add a cgit favicon
-#favicon=/images/favicon.ico
+#favicon=/images/mycorp.ico
 # Use a custom logo
-#logo=/images/Logo.png
+logo=/images/mycorp.png
 
 # Allow download of tar.gz, tar.bz2 and zip-files
 snapshots=tar.gz zip
@@ -71,9 +71,9 @@ cache-root=/var/lib/mygit/cache/cgit/public
 # Include some more info about example.com on the index page
 #root-readme=/var/lib/mygit/www/about-public.html
 # Set the title and heading of the repository index page
-root-title=GIT TESTS repositories
+root-title=GIT Public repositories
 # Set a subheading for the repository index page
-root-desc=TESTS TESTS TESTS
+root-desc=Public repositories
 # Specify some default clone urls
 clone-prefix=https://git.mycorp.org/public
 # Path which will be scanned for repositories
