--- a/rpm-packaging/mygit/SOURCE/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCE/apache2-git.conf
@@ -46,5 +46,12 @@
     RewriteRule ^cgit.cgi$  cgit.cgi/
   </Directory>
 
+    Alias /images/ /var/lib/mygit/www/images/
+    <Location /public >
+        SetEnv CGIT_CONFIG /home/swfgit/etc/cgitrc-public
+        SetHandler cgi-script
+        Options +ExecCGI
+    </Location>
+
 
 </VirtualHost>
