--- a/rpm-packaging/mygit/SOURCES/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCES/apache2-git.conf
@@ -47,11 +47,12 @@
   </Directory>
 
     Alias /images/ /var/lib/mygit/www/images/
-    <Location /public >
-        SetEnv CGIT_CONFIG /home/swfgit/etc/cgitrc-public
-        SetHandler cgi-script
-        Options +ExecCGI
-    </Location>
 
+    <Directory "/var/lib/mygit/www/images">
+        Options Indexes MultiViews
+        AllowOverride None
+        Order allow,deny
+        Allow from all
+    </Directory>
 
 </VirtualHost>
