--- a/rpm-packaging/mygit/SOURCES/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCES/apache2-git.conf
@@ -31,8 +31,8 @@
 
     SetEnv CGIT_CONFIG /var/lib/mygit/conf/public.conf
 
-    Addhandler cgi-bin/cgit/cgi-script .cgi
-    DirectoryIndex cgit.cgi
+    Addhandler cgi-script .cgi
+    DirectoryIndex cgi-bin/cgit/cgit.cgi
     Options +FollowSymLinks +ExecCGI
     AllowOverride None
     Order allow,deny
