--- a/rpm-packaging/mygit/SOURCES/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCES/apache2-git.conf
@@ -23,36 +23,94 @@
   # Logs
   ErrorLog /var/log/apache2/git_error_log
   CustomLog /var/log/apache2/git_access_log combined
+  RewriteLog /var/log/apache2/git_rewrite_log
+  RewriteLogLevel 5
+
   LogLevel warn
 
-  DocumentRoot /srv/www/htdocs/cgit
+  Alias /images/ /var/lib/mygit/www/images/
 
-  <Directory /srv/www/htdocs/cgit>
-
-    SetEnv CGIT_CONFIG /var/lib/mygit/conf/public.conf
-
-    Addhandler cgi-script .cgi
-    DirectoryIndex cgi-bin/cgit/cgit.cgi
-    Options +FollowSymLinks +ExecCGI
+  <Directory "/var/lib/mygit/www/images">
+    Options Indexes MultiViews
     AllowOverride None
     Order allow,deny
-    allow from all
-
-    RewriteEngine On
-    RewriteBase /
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule (.*) cgit.cgi/$1
-    RewriteRule ^cgit.cgi$  cgit.cgi/
+    Allow from all
   </Directory>
 
-    Alias /images/ /var/lib/mygit/www/images/
+  RewriteEngine           On
+  #Redirect by default to our public projects repositories
+  RedirectMatch "^/?$" "/public/"
 
-    <Directory "/var/lib/mygit/www/images">
-        Options Indexes MultiViews
-        AllowOverride None
-        Order allow,deny
-        Allow from all
-    </Directory>
+  SetEnv GIT_PROJECT_ROOT /var/lib/mygit/repos/
+  SetEnv GIT_HTTP_EXPORT_ALL
+
+  AliasMatch ^/images/(.*)$    /var/lib/mygit/www/images/$1
+
+  # Apache used to return static files that are stored on disk
+  AliasMatch ^/(.*/objects/[0-9a-f]{2}/[0-9a-f]{38})$          /var/lib/mygit/repos/$1
+  AliasMatch ^/(.*/objects/pack/pack-[0-9a-f]{40}.(pack|idx))$ /var/lib/mygit/repos/$1
+
+  # Redirect specific GIT paths to git-http-backend
+  ScriptAliasMatch \
+        "(?x)^/(.*/(HEAD | \
+                        info/refs | \
+                        objects/(info/[^/]+ | \
+                                 [0-9a-f]{2}/[0-9a-f]{38} | \
+                                 pack/pack-[0-9a-f]{40}\.(pack|idx)) | \
+                        git-(upload|receive)-pack))$" \
+        /usr/lib/git/git-http-backend/$1
+
+  Alias /cgit.css /srv/www/htdocs/cgit/cgit.css
+
+  #
+  # Public Repositories
+  # Anonymous read access but authenticated write access, require authorization
+  #
+
+  Alias /public/ /srv/www/cgi-bin/cgit/cgit.cgi/
+
+  <Location /public >
+      SetEnv CGIT_CONFIG  /var/lib/mygit/conf/public.conf
+      SetHandler cgi-script
+      Options +ExecCGI
+  </Location>
+
+  <LocationMatch "^/public/.*/git-receive-pack$">
+      Order deny,allow
+      Allow from all
+
+      AuthType Basic
+      AuthName "Public Git Repository Access"
+      AuthUserFile /var/lib/mygit/conf/credentials
+      Require valid-user
+  </LocationMatch>
+
+  #
+  # Private Repositories
+  # Read and write access require authorization
+  #
+
+  Alias /private/ /srv/www/cgi-bin/cgit/cgit.cgi/
+
+  <Location /private >
+      SetEnv CGIT_CONFIG  /var/lib/mygit/conf/private.conf
+      SetHandler cgi-script
+      Options +ExecCGI
+
+      AuthType Basic
+      AuthName "Public Git Repository Access"
+      AuthUserFile /var/lib/mygit/conf/credentials
+      Require valid-user
+  </Location>
+
+  <LocationMatch "^/private/.*/git-receive-pack$">
+      Order deny,allow
+      Allow from all
+
+      AuthType Basic
+      AuthName "Public Git Repository Access"
+      AuthUserFile /var/lib/mygit/conf/credentials
+      Require valid-user
+    </LocationMatch>
 
 </VirtualHost>
