--- a/rpm-packaging/mygit/SOURCES/private.conf
+++ b/rpm-packaging/mygit/SOURCES/private.conf
@@ -69,12 +69,12 @@ mimetype.svg=image/svg+xml
 # Path used to store the cgit cache entries
 cache-root=/var/lib/mygit/cache/cgit/public
 # Include some more info about example.com on the index page
-root-readme=/var/lib/mygit/www/public-readme.html
+root-readme=/var/lib/mygit/www/private-readme.html
 # Set the title and heading of the repository index page
 root-title=MyCorp Private GIT repositories
 # Set a subheading for the repository index page
 root-desc=Private repositories
 # Specify some default clone urls
-clone-prefix=http://git.mycorp.org/public
+clone-prefix=http://git.mycorp.org/private
 # Path which will be scanned for repositories
-scan-path=/var/lib/mygit/repos/public
+scan-path=/var/lib/mygit/repos/private
