--- a/rpm-packaging/mygit/SOURCES/public.conf
+++ b/rpm-packaging/mygit/SOURCES/public.conf
@@ -71,9 +71,9 @@ cache-root=/var/lib/mygit/cache/cgit/public
 # Include some more info about example.com on the index page
 root-readme=/var/lib/mygit/www/public-readme.html
 # Set the title and heading of the repository index page
-root-title=MyCorp Private GIT repositories
+root-title=MyCorp Public GIT repositories
 # Set a subheading for the repository index page
-root-desc=Private repositories
+root-desc=Public repositories
 # Specify some default clone urls
 clone-prefix=http://git.mycorp.org/public
 # Path which will be scanned for repositories
