--- a/rpm-packaging/mygit/SOURCES/public.conf
+++ b/rpm-packaging/mygit/SOURCES/public.conf
@@ -40,7 +40,7 @@ max-stats=quarter
 # Specify the css url
 css=/cgit.css
 # Add a cgit favicon
-#favicon=/images/mycorp.ico
+favicon=/images/mycorp.ico
 # Use a custom logo
 logo=/images/mycorp.png
 
