--- a/rpm-packaging/mygitblit/SOURCES/myapp-users.properties
+++ b/rpm-packaging/mygitblit/SOURCES/myapp-users.properties
@@ -1,3 +1,3 @@
 ## Gitblit realm file format: username=password,\#permission,repository1,repository2...
 #Fri Nov 11 17:41:49 EST 2011
-admin=admin,\#@@ADMIN_PASSWORD@@,\#notfederated
+admin=@@ADMIN_PASSWORD@@,\#admin,\#notfederated
