fix AJP port for mygitblit

--- a/rpm-packaging/myforge-apache2-front/SOURCES/git.mycorp.org.conf
+++ b/rpm-packaging/myforge-apache2-front/SOURCES/git.mycorp.org.conf
@@ -25,6 +25,6 @@
   CustomLog /var/log/apache2/git_access_log combined
 
   # JK relay
-  JkMount /* mygit
+  JkMount /* mygitblit
 
 </VirtualHost>
