--- a/rpm-packaging/myforge-apache2-front/SOURCES/workers.properties
+++ b/rpm-packaging/myforge-apache2-front/SOURCES/workers.properties
@@ -1,4 +1,4 @@
-worker.list=myjenkins, mynexus, mysonar, mygit
+worker.list=myjenkins, mynexus, mysonar, mygitblit
 
 # Set properties for myjenkins (ajp13)
 worker.myjenkins.type=ajp13
@@ -15,7 +15,7 @@ worker.mysonar.type=ajp13
 worker.mysonar.host=localhost
 worker.mysonar.port=12377
 
-# Set properties for mygit (ajp13)
-worker.mygit.type=ajp13
-worker.mygit.host=localhost
-worker.mygit.port=12377
+# Set properties for mygitblit (ajp13)
+worker.mygitblit.type=ajp13
+worker.mygitblit.host=localhost
+worker.mygitblit.port=12387
