--- a/rpm-packaging/myforge-apache2-front/SOURCES/ci.mycorp.org.conf
+++ b/rpm-packaging/myforge-apache2-front/SOURCES/ci.mycorp.org.conf
@@ -5,7 +5,8 @@
 <VirtualHost *:80>
 
   ServerAdmin webmaster@mycorp.org
-  ServerName ci.mycorp.org
+  ServerName  ci.mycorp.org
+  ServerAlias ci.hgomez.net
 
   ErrorDocument 400 default
   ErrorDocument 401 default
