--- a/rpm-packaging/myforge-apache2-front/SOURCES/git.mycorp.org.conf
+++ b/rpm-packaging/myforge-apache2-front/SOURCES/git.mycorp.org.conf
@@ -1,7 +1,8 @@
 <VirtualHost *:80>
 
   ServerAdmin forgemaster@mycorp.org
-  ServerName git.mycorp.org
+  ServerName  git.mycorp.org
+  ServerAlias git.hgomez.net
 
   ErrorDocument 400 default
   ErrorDocument 401 default
