--- a/rpm-packaging/myforge-apache2-front/SOURCES/packages.mycorp.org.conf
+++ b/rpm-packaging/myforge-apache2-front/SOURCES/packages.mycorp.org.conf
@@ -1,12 +1,12 @@
 #
-# sonar.mycorp.org non SSL
+# packages.mycorp.org non SSL
 #
 
 <VirtualHost *:80>
 
   ServerAdmin webmaster@mycorp.org
-  ServerName  sonar.mycorp.org
-  ServerAlias sonar.hgomez.net
+  ServerName packages.mycorp.org
+  ServerAlias packages.hgomez.net
 
   ErrorDocument 400 default
   ErrorDocument 401 default
@@ -28,15 +28,17 @@
   SetOutputFilter DEFLATE
   SetInputFilter DEFLATE
 
-  DeflateFilterNote Input instream
-  DeflateFilterNote Output outstream
-  DeflateFilterNote Ratio ratio
-
   # Logs
-  ErrorLog /var/log/apache2/sonar_error_log
-  CustomLog /var/log/apache2/sonar_access_log combined
+  ErrorLog /var/log/apache2/packages_error_log
+  CustomLog /var/log/apache2/packages_access_log combined
 
-  # JK relay
-  JkMount /* mysonar
+  DocumentRoot /srv/www/repos
+
+  <Directory "/srv/www/repos">
+        Options Indexes
+        AllowOverride None
+        Order allow,deny
+        Allow from all
+  </Directory>
 
 </VirtualHost>
