--- a/rpm-packaging/myforge-apache2-front/SOURCES/repository.mycorp.org.conf
+++ b/rpm-packaging/myforge-apache2-front/SOURCES/repository.mycorp.org.conf
@@ -5,7 +5,8 @@
 <VirtualHost *:80>
 
   ServerAdmin webmaster@mycorp.org
-  ServerName repository.mycorp.org
+  ServerName  repository.mycorp.org
+  ServerAlias repository.hgomez.net
 
   ErrorDocument 400 default
   ErrorDocument 401 default
