--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -46,9 +46,9 @@
 
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>tomcat-maven-plugin</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat6-maven-plugin</artifactId>
+                <version>2.0-SNAPSHOT</version>
                 <configuration>
                     <path>/${project.build.finalName}</path>
                 </configuration>
