Define ASF repositories for SNAPSHOTs

--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -8,6 +8,33 @@
     <name>Basic Performance Webapp</name>
     <url>http://maven.apache.org</url>
 
+ <repositories>
+    <repository>
+      <id>people.apache.snapshots</id>
+      <url>http://repository.apache.org/content/groups/snapshots-group/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>apache.snapshots</id>
+      <name>Apache Snapshots</name>
+      <url>http://repository.apache.org/content/groups/snapshots-group/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
+
     <properties>
         <!-- Java 5 -->
         <maven.compiler.source>5</maven.compiler.source>
