--- a/debian-packaging/myjenkins/SOURCES/myapp.config
+++ b/debian-packaging/myjenkins/SOURCES/myapp.config
@@ -45,10 +45,12 @@ JENKINS_HOME=@@SKEL_DATADIR@@
 # JVM Settings
 #
 APP_JAVA_HOME=
-APP_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxPermSize=128m -Xss512k -XX:+UseCompressedOops"
+APP_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxPermSize=128m -Xss512k"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Djava.security.egd=file:/dev/./urandom"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@SKEL_LOGDIR@@"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Dhudson.model.Hudson.logStartupPerformance=true"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$JENKINS_HOME"
+
+#APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+UseCompressedOops"
 
 
