improve release data

--- a/debian-packaging/myjenkins/SOURCES/control
+++ b/debian-packaging/myjenkins/SOURCES/control
@@ -1,4 +1,4 @@
-Source: myjenkins
+Source: @@SKEL_APP@@
 Section: devel
 Priority: optional
 Maintainer: Gildas Cuisinier
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 Version: 1.0.0
 
-Package: myjenkins
+Package: @@SKEL_APP@@
 Architecture: all
 Depends: daemon, adduser, java6-sdk
-Description: Jenkins  powered by Apache Tomcat 
+Description: @@SKEL_APP@@ @@SKEL_APPVERSION@@  powered by Apache Tomcat @@SKEL_TOMCATVERSION@@
