rework to follow RPM namings

--- a/debian-packaging/mygitblit/SOURCES/gitblit.config
+++ b/debian-packaging/mygitblit/SOURCES/gitblit.config
@@ -11,7 +11,7 @@ APP_AJP_PORT=12387
 
 APP_RMIREGISTRY_PORT=12388
 APP_RMISERVER_PORT=12389
-APP_JVM_ROUTE=@@SKEL_APP@@
+APP_JVM_ROUTE=@@GITBLIT_APP@@
 
 APP_HTTP_MAX_THREADS=150
 APP_HTTP_MIN_SPARE_THREADS=25
@@ -23,23 +23,23 @@ APP_AJP_MAX_THREADS=150
 APP_AJP_MIN_SPARE_THREADS=25
 
 APP_JMX_READER_USER=reader
-APP_JMX_READER_PASSWORD=@@SKEL_RO_PWD@@
+APP_JMX_READER_PASSWORD=@@GITBLIT_RO_PWD@@
 
 APP_JMX_ADMIN_USER=admin
-APP_JMX_ADMIN_PASSWORD=@@SKEL_RW_PWD@@
+APP_JMX_ADMIN_PASSWORD=@@GITBLIT_RW_PWD@@
 
 #
 # Linux Service variables
 #
-CATALINA_HOME="@@SKEL_APPDIR@@"
-CATALINA_OUT="@@SKEL_LOGDIR@@/catalina.out"
-CATALINA_PID="/var/run/@@SKEL_APP@@.pid"
+CATALINA_HOME="@@GITBLIT_APPDIR@@"
+CATALINA_OUT="@@GITBLIT_LOGDIR@@/catalina.out"
+CATALINA_PID="/var/run/@@GITBLIT_APP@@.pid"
 SHUTDOWN_WAIT=10
 
 #
 # Nexus Data location
 #
-export PLEXUS_NEXUS_WORK=@@SKEL_DATADIR@@
+export PLEXUS_NEXUS_WORK=@@GITBLIT_DATADIR@@
 
 #
 # JVM Settings
@@ -47,7 +47,7 @@ export PLEXUS_NEXUS_WORK=@@SKEL_DATADIR@@
 APP_JAVA_HOME=
 APP_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxPermSize=128m -Xss512k"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Djava.security.egd=file:/dev/./urandom"
-APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@SKEL_LOGDIR@@"
+APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@GITBLIT_LOGDIR@@"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Dhudson.model.Hudson.logStartupPerformance=true"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$JENKINS_HOME"
 
