--- a/debian-packaging/myapp/SOURCES/myapp.config
+++ b/debian-packaging/myapp/SOURCES/myapp.config
@@ -11,7 +11,7 @@ APP_AJP_PORT=8009
 
 APP_RMIREGISTRY_PORT=8006
 APP_RMISERVER_PORT=8007
-APP_JVM_ROUTE=@@SKEL_APP@@
+APP_JVM_ROUTE=@@MYAPP_APP@@
 
 APP_HTTP_MAX_THREADS=150
 APP_HTTP_MIN_SPARE_THREADS=25
@@ -23,23 +23,23 @@ APP_AJP_MAX_THREADS=150
 APP_AJP_MIN_SPARE_THREADS=25
 
 APP_JMX_READER_USER=reader
-APP_JMX_READER_PASSWORD=@@SKEL_RO_PWD@@
+APP_JMX_READER_PASSWORD=@@MYAPP_RO_PWD@@
 
 APP_JMX_ADMIN_USER=admin
-APP_JMX_ADMIN_PASSWORD=@@SKEL_RW_PWD@@
+APP_JMX_ADMIN_PASSWORD=@@MYAPP_RW_PWD@@
 
 #
 # Linux Service variables
 #
-CATALINA_HOME="@@SKEL_APPDIR@@"
-CATALINA_OUT="@@SKEL_LOGDIR@@/catalina.out"
-CATALINA_PID="/var/run/@@SKEL_APP@@.pid"
+CATALINA_HOME="@@MYAPP_APPDIR@@"
+CATALINA_OUT="@@MYAPP_LOGDIR@@/catalina.out"
+CATALINA_PID="/var/run/@@MYAPP_APP@@.pid"
 SHUTDOWN_WAIT=10
 
 #
 # Jenkins Data location
 #
-JENKINS_HOME=@@SKEL_DATADIR@@
+JENKINS_HOME=@@MYAPP_DATADIR@@
 
 #
 # JVM Settings
@@ -47,7 +47,7 @@ JENKINS_HOME=@@SKEL_DATADIR@@
 APP_JAVA_HOME=
 APP_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxPermSize=128m -Xss512k"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Djava.security.egd=file:/dev/./urandom"
-APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@SKEL_LOGDIR@@"
+APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@MYAPP_LOGDIR@@"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Dhudson.model.Hudson.logStartupPerformance=true"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$JENKINS_HOME"
 
