--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -8,38 +8,13 @@
     <name>Basic Performance Webapp</name>
     <url>http://maven.apache.org</url>
 
- <repositories>
-    <repository>
-      <id>people.apache.snapshots</id>
-      <url>http://repository.apache.org/content/groups/snapshots-group/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>apache.snapshots</id>
-      <name>Apache Snapshots</name>
-      <url>http://repository.apache.org/content/groups/snapshots-group/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
-
     <properties>
         <!-- Java 5 -->
         <maven.compiler.source>5</maven.compiler.source>
         <maven.compiler.target>5</maven.compiler.target>
-        <tomcat.version>6.0.32</tomcat.version>
+        <tomcat6.version>6.0.36</tomcat6.version>
+        <tomcat7.version>6.0.36</tomcat7.version>
+		<webapp.name>basic-perf</webapp.name>
     </properties>
 
     <dependencies>
@@ -58,43 +33,45 @@
             <scope>provided</scope>
         </dependency>
 
+<!--
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>catalina</artifactId>
             <version>${tomcat.version}</version>
             <scope>provided</scope>
         </dependency>
-
+-->
+	
     </dependencies>
 
     <build>
 
-        <finalName>basic-perf</finalName>
+        <finalName>${webapp.name}</finalName>
 
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat6-maven-plugin</artifactId>
-                <version>2.0-SNAPSHOT</version>
+                <version>2.0</version>
                 <configuration>
-                    <path>/${project.build.finalName}</path>
+                    <path>/${webapp.name}</path>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.0-SNAPSHOT</version>
+                <version>2.0</version>
                 <configuration>
-                    <path>/${project.build.finalName}</path>
+                    <path>/${webapp.name}</path>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>7.2.2.v20101205</version>
+                <version>8.1.7.v20120910</version>
                 <configuration>
-                    <contextPath>/${project.build.finalName}</contextPath>
+                    <contextPath>/${webapp.name}</contextPath>
                 </configuration>
             </plugin>
 
