--- a/debian-packaging/mynexus/SOURCES/control
+++ b/debian-packaging/mynexus/SOURCES/control
@@ -1,12 +1,11 @@
 Source: @@SKEL_APP@@
 Section: devel
 Priority: optional
-Maintainer: Gildas Cuisinier
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
-Version: 1.0.0
+Maintainer: Henri Gomez
+Homepage: https://github.com/hgomez/devops-incubator
 
 Package: @@SKEL_APP@@
 Architecture: all
-Depends: daemon, adduser, java6-sdk
+Depends: java6-runtime, daemon, adduser
+Suggests: java6-runtime-headless
 Description: @@SKEL_APP@@ @@SKEL_APPVERSION@@  powered by Apache Tomcat @@SKEL_TOMCATVERSION@@
