--- a/debian-packaging/myjenkins/SOURCES/app.config
+++ b/debian-packaging/myjenkins/SOURCES/app.config
@@ -11,7 +11,7 @@ APP_AJP_PORT=12357
 
 APP_RMIREGISTRY_PORT=12358
 APP_RMISERVER_PORT=12359
-APP_JVM_ROUTE=@@JENKINS_APP@@
+APP_JVM_ROUTE=@@APP_NAME@@
 
 APP_HTTP_MAX_THREADS=150
 APP_HTTP_MIN_SPARE_THREADS=25
@@ -23,23 +23,23 @@ APP_AJP_MAX_THREADS=150
 APP_AJP_MIN_SPARE_THREADS=25
 
 APP_JMX_READER_USER=reader
-APP_JMX_READER_PASSWORD=@@JENKINS_RO_PWD@@
+APP_JMX_READER_PASSWORD=@@APP_RO_PWD@@
 
 APP_JMX_ADMIN_USER=admin
-APP_JMX_ADMIN_PASSWORD=@@JENKINS_RW_PWD@@
+APP_JMX_ADMIN_PASSWORD=@@APP_RW_PWD@@
 
 #
 # Linux Service variables
 #
-CATALINA_HOME="@@JENKINS_APPDIR@@"
-CATALINA_OUT="@@JENKINS_LOGDIR@@/catalina.out"
-CATALINA_PID="/var/run/@@JENKINS_APP@@.pid"
+CATALINA_HOME="@@APP_APPDIR@@"
+CATALINA_OUT="@@APP_LOGDIR@@/catalina.out"
+CATALINA_PID="/var/run/@@APP_NAME@@.pid"
 SHUTDOWN_WAIT=10
 
 #
 # Jenkins Data location
 #
-JENKINS_HOME=@@JENKINS_DATADIR@@
+JENKINS_HOME=@@APP_DATADIR@@
 
 #
 # JVM Settings
@@ -47,9 +47,9 @@ JENKINS_HOME=@@JENKINS_DATADIR@@
 APP_JAVA_HOME=
 APP_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxPermSize=128m -Xss512k"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Djava.security.egd=file:/dev/./urandom"
-APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@JENKINS_LOGDIR@@"
+APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@APP_LOGDIR@@"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Dhudson.model.Hudson.logStartupPerformance=true"
-APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$JENKINS_HOME"
+APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$APP_HOME"
 
 #APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+UseCompressedOops"
 
