--- a/debian-packaging/myjenkins/SOURCES/app.config
+++ b/debian-packaging/myjenkins/SOURCES/app.config
@@ -1,8 +1,9 @@
 #
-# MyApp Configuration
+# @@APP_NAME@@ Configuration
 #
 # Vars starting with APP_ are used to replace contents in skeletons files
 #
+
 
 APP_SERVER_PORT=12354
 APP_HTTP_PORT=12355
@@ -36,10 +37,7 @@ CATALINA_OUT="@@APP_LOGDIR@@/catalina.out"
 CATALINA_PID="/var/run/@@APP_NAME@@.pid"
 SHUTDOWN_WAIT=10
 
-#
-# Jenkins Data location
-#
-JENKINS_HOME=@@APP_DATADIR@@
+
 
 #
 # JVM Settings
@@ -49,8 +47,14 @@ APP_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxPermSize=128m -Xss512k"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Djava.security.egd=file:/dev/./urandom"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=@@APP_LOGDIR@@"
 APP_JAVA_OPTS="$APP_JAVA_OPTS -Dhudson.model.Hudson.logStartupPerformance=true"
-APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$APP_HOME"
 
 #APP_JAVA_OPTS="$APP_JAVA_OPTS -XX:+UseCompressedOops"
+
+
+#
+# Applications specifics
+#
+JENKINS_HOME=@@APP_DATADIR@@
+APP_JAVA_OPTS="$APP_JAVA_OPTS -DJENKINS_HOME=$JENKINS_HOME"
 
 
