Update conf to reflect change in Git 1.7.8+

--- a/rpm-packaging/mygit/SOURCES/apache2-git.conf
+++ b/rpm-packaging/mygit/SOURCES/apache2-git.conf
@@ -69,21 +69,25 @@
 
   Alias /public/ /srv/www/cgi-bin/cgit/cgit.cgi/
 
+  RewriteCond %{QUERY_STRING} git-receive-pack [OR]
+  RewriteCond %{REQUEST_URI} /git-receive-pack$
+  RewriteRule .* - [E=AUTHREQUIRED:yes]
+
   <Location /public >
       SetEnv CGIT_CONFIG  /var/lib/mygit/conf/public.conf
       SetHandler cgi-script
       Options +ExecCGI
-  </Location>
 
-  <LocationMatch "^/public/.*/git-receive-pack$">
-      Order deny,allow
-      Allow from all
-
+      Order Allow,Deny 
+      Deny from env=AUTHREQUIRED 
+      Allow from all 
+      Satisfy Any
+      
       AuthType Basic
       AuthName "Public Git Repository Access"
-      AuthUserFile /var/lib/mygit/conf/credentials
+      AuthUserFile /var/lib/mygit/conf/public-credentials
       Require valid-user
-  </LocationMatch>
+  </Location>
 
   #
   # Private Repositories
@@ -99,18 +103,8 @@
 
       AuthType Basic
       AuthName "Public Git Repository Access"
-      AuthUserFile /var/lib/mygit/conf/credentials
+      AuthUserFile /var/lib/mygit/conf/private-credentials
       Require valid-user
   </Location>
-
-  <LocationMatch "^/private/.*/git-receive-pack$">
-      Order deny,allow
-      Allow from all
-
-      AuthType Basic
-      AuthName "Public Git Repository Access"
-      AuthUserFile /var/lib/mygit/conf/credentials
-      Require valid-user
-    </LocationMatch>
 
 </VirtualHost>
