--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -12,9 +12,8 @@
         <!-- Java 5 -->
         <maven.compiler.source>5</maven.compiler.source>
         <maven.compiler.target>5</maven.compiler.target>
-        <tomcat6.version>6.0.36</tomcat6.version>
-        <tomcat7.version>6.0.36</tomcat7.version>
-		<webapp.name>basic-perf</webapp.name>
+	<webapp.name>basic-perf</webapp.name>
+	<http.port>8081</http.port>
     </properties>
 
     <dependencies>
@@ -33,15 +32,6 @@
             <scope>provided</scope>
         </dependency>
 
-<!--
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>catalina</artifactId>
-            <version>${tomcat.version}</version>
-            <scope>provided</scope>
-        </dependency>
--->
-	
     </dependencies>
 
     <build>
@@ -52,16 +42,18 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat6-maven-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1</version>
                 <configuration>
+                    <port>${http.port}</port>
                     <path>/${webapp.name}</path>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1</version>
                 <configuration>
+                    <port>${http.port}</port>
                     <path>/${webapp.name}</path>
                 </configuration>
             </plugin>
@@ -69,9 +61,17 @@
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.7.v20120910</version>
+                <version>8.1.10.v20130312</version>
                 <configuration>
-                    <contextPath>/${webapp.name}</contextPath>
+                    <webApp>
+                      <contextPath>/${webapp.name}</contextPath>
+                    </webApp>
+                    <connectors>
+                      <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                        <port>${http.port}</port>
+                        <maxIdleTime>60000</maxIdleTime>
+                      </connector>
+                  </connectors>
                 </configuration>
             </plugin>
 
