--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -70,18 +70,21 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.1</version>
+				<configuration>
+					<port>${http.port}</port>
+					<path>/${webapp.name}</path>
+				</configuration>
+
 
 				<executions>
+				
 					<execution>
-
 						<id>tomcat-run</id>
 						<goals>
 							<goal>run-war-only</goal>
 						</goals>
 						<phase>pre-integration-test</phase>
 						<configuration>
-							<port>${http.port}</port>
-							<path>/${webapp.name}</path>
 							<fork>true</fork>
 						</configuration>
 					</execution>
@@ -93,8 +96,6 @@
 						</goals>
 						<phase>post-integration-test</phase>
 						<configuration>
-							<port>${http.port}</port>
-							<path>/${webapp.name}</path>
 							<fork>true</fork>
 						</configuration>
 					</execution>
