no fork in exec:run

--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -145,6 +145,7 @@
 						<jvmArg>-Dpause=1</jvmArg>
 						<jvmArg>-Dloop=${simulation.loops}</jvmArg>
 					</jvmArgs>
+					<fork>false</fork>
 					<failOnError>false</failOnError>
 				</configuration>
 				<executions>
