--- a/docker/centos6/myjenkins-lts/Dockerfile
+++ b/docker/centos6/myjenkins-lts/Dockerfile
@@ -1,10 +1,10 @@
-# devops-incubator-centos6-jenkins-lts
+# di-centos6-myjenkins-lts
 #
 # Devops Incubator image based on CentOS 6
 #
 # VERSION               0.0.1
 
-FROM     hgomez:devops-incubator-centos6
+FROM     hgomez:di-centos6-base
 MAINTAINER Henri Gomez "henri.gomez@gmail.com"
 
 # Install Jenkins LTS
