start Jenkins via init.d and expose its HTTP port

--- a/docker/centos6/myjenkins-lts/Dockerfile
+++ b/docker/centos6/myjenkins-lts/Dockerfile
@@ -9,3 +9,10 @@ MAINTAINER Henri Gomez "henri.gomez@gmail.com"
 
 # Install Jenkins LTS
 RUN yum install myjenkins-lts -y
+
+# Jenkins HTTP port is 12355
+EXPOSE 12355
+
+# Start Jenkins 
+CMD    ["/etc/init.d/myjenkins", "start"]
+
