--- a/docker/centos6/Dockerfile
+++ b/docker/centos6/Dockerfile
@@ -20,8 +20,8 @@ RUN echo "enabled=1" >> /etc/yum.repos.d/devops-incubator.repo
 RUN yum clean all
 RUN yum update -y
 
-# Install wget
-RUN yum install wget -y
+# Install wget and supervisor
+RUN yum install wget supervisor -y
 
 # Install Oracle Java 7 
 RUN wget --no-check-certificate --no-cookies --no-check-certificate --header "Cookie: oraclelicense=accept-securebackup-cookie" -O jdk7-linux-x64.rpm "http://download.oracle.com/otn-pub/java/jdk/7u71-b14/jdk-7u71-linux-x64.rpm"
